# ohtu-miniprojekti

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  retro.md  retro_26.11  test.sh  test_data.sql
.github/workflows/: main.yml
src/: app.py  config.py  db_helper.py  exceptions.py  log.html  output.xml  report.html  util.py
src/entities/: reference.py
src/repositories/: acm_scraper.py  reference_repository.py  search_handler.py
src/static/: scripts.js  style.css
src/story_tests/: add_article.robot  add_book.robot  add_references.robot  download_refrences.robot  edit_article.robot  edit_reference.robot  filter.robot  list_references.robot  pages.robot  remove_reference.robot  resource.robot  search.robot  start.robot
src/templates/: edit_reference.html  index.html  layout.html  list_references.html  new_reference.html  new_reference_popup.html  popup_new_search_reference.html
src/templates/fields/: booklet.html
src/tests/: references_test.py  test_bibtex.py  test_reference_functions.py  test_routes.py  test_search_functions.py
